# nvim-coverage

./: LICENSE  Makefile  README.md  nvim-coverage-scm-1.rockspec
doc/: nvim-coverage.txt
lua/coverage/: config.lua  highlight.lua  init.lua  lcov.lua  report.lua  signs.lua  summary.lua  util.lua  watch.lua
lua/coverage/languages/: c.lua  common.lua  cpp.lua  cs.lua  dart.lua  elixir.lua  go.lua  java.lua  javascript.lua  julia.lua  lua.lua  php.lua  python.lua  ruby.lua  rust.lua  swift.lua  typescript.lua  vue.lua
lua/coverage/parsers/: corbertura.lua
tests/: README.md  signs_spec.lua
tests/languages/: go_spec.lua  python_spec.lua  ruby_spec.lua  typescript_spec.lua
tests/languages/cpp/: CMakeLists.txt
tests/languages/cpp/src/: CMakeLists.txt  example.cpp  example.hpp
tests/languages/cpp/tests/: CMakeLists.txt  exampleTests.cpp
tests/languages/go/: fizzbuzz.go  fizzbuzz_test.go  go.mod
tests/languages/python/: .coveragerc  Pipfile  fizzbuzz.py  test_fizzbuzz.py
tests/languages/ruby/: .gitignore  Gemfile  example-ruby.gemspec
tests/languages/ruby/lib/: fizzbuzz.rb
tests/languages/ruby/spec/: fizzbuzz_spec.rb  spec_helper.rb
tests/languages/typescript/: .swcrc  jest.config.ts  package-lock.json  package.json
tests/languages/typescript/src/: fizzbuzz.test.ts  fizzbuzz.ts
